<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingBottom="34dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Header"
                android:text="@string/sign_in_authorization"/>

            <LinearLayout
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:paddingBottom="18dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:orientation="vertical"
                android:gravity="start"
                style="@style/AppTheme.Container.Card">
                <TextView
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_id"
                    android:labelFor="@+id/sign_in_id"
                    />

                <EditText
                    style="@style/FormField"
                    android:id="@+id/sign_in_id"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="5"
                    android:inputType="number"
                    />
                <LinearLayout
                    android:id="@+id/id_error_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:gravity="start|center">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginRight="7dp"
                        app:srcCompat="@drawable/ic_error_exclamation"/>
                    <TextView
                        android:id="@+id/identificator_error_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:textSize="14sp"
                        android:text="Id incorrect" />
                </LinearLayout>

                <TextView
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_password"
                    android:labelFor="@+id/sign_in_password"
                    />

                <EditText
                    style="@style/FormField"
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

                <LinearLayout
                    android:id="@+id/password_error_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:gravity="start|center">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginRight="7dp"
                        app:srcCompat="@drawable/ic_error_exclamation"/>
                    <TextView
                        android:id="@+id/password_error_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:textSize="14sp"
                        android:text="@string/password_incorrect" />
                </LinearLayout>


                <Button
                    android:id="@+id/sign_in_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    style="@style/Button.Main"
                    android:text="@string/sign_in_sign_in" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
